--- a/content/articles/2025-08-13-ai-code-and-copyright.mdx
+++ b/content/articles/2025-08-13-ai-code-and-copyright.mdx
@@ -2,6 +2,7 @@
 title: "AI, Code, and Copyright: What Engineering Leaders Should Actually Worry About"
 date: "2025-08-13"
 slug: "ai-code-and-copyright"
+featuredImage: "/images/digital_flow_of_human_code.webp"
 ---
 **TLDR version:** AI pair programmers are not giant copy machines. Verbatim copying can happen in edge cases, yet the bigger business risks sit elsewhere. Treat this like any other software risk: understand where copyright protection applies, add guardrails, review outputs, and keep moving.
 
@@ -18,17 +19,20 @@ Two ideas from U.S. copyright law matter most for software:
 1. Ideas vs expression. Copyright protects the expression of an idea, not the idea, process, system, or method itself. In code, that line gets tested, but the core principle is steady.  
 2. Substantial and original. Small, routine snippets usually are not protectable on their own. Courts tend to filter out unprotectable elements in software first, then compare what remains. A well known case, Computer Associates v. Altai, established an approach that removes ideas, necessary elements, and public domain code before asking whether two programs are substantially similar. Google v. Oracle also showed how fair use can apply to software interfaces, which reminds us that software copyright has limits and defenses.
 
-In Plain English: short boilerplate and common patterns are not where copyright fights usually happen.
+***In Plain English***: short boilerplate and common patterns are not where copyright fights usually happen.
 
 ### So, is “AI-coded” copyright infringement a big operational risk?
 
 For most teams today, the risk may not be zero but is small and manageable and it's probably less than the copy and paste days.
 
-* Copyright still centers on human authorship, originality, and substantial similarity. Routine helper methods and boilerplate are not a strong basis for a claim.  
+* Copyright still centers on human authorship, originality, and substantial similarity. Routine helper methods and boilerplate are not a strong basis for a claim.
+* LLMs are not copy machines. They generate from learned patterns not stored text. Verbatim reproduction can occur in narrow situations and code large enough to be a copyright claim is almost impossible for an LLM to reproduce. This was proven in the OpenAI v. New York Times case last year and in many studies.
 * Lawsuits around AI and code have mostly targeted training practices and tool providers, not everyday users who review and edit suggestions.  
 * Many vendors now offer enterprise indemnities for their coding assistants when you follow their terms, which shifts risk away from normal development teams.
 
 This is not a free pass. It simply means you should treat AI code assistance like any other source of code that needs review, attribution where required, and compliance discipline.
+
+***Takeaway***: AI does not significantly increase the risk of copyright infringement in terms of the code you write. CTOs should have software quality and security processes in place to review and audit code normally, but AI doesn't introduce new risks in terms of copyright infringement.
 
 ### Practical mitigation that works
 
@@ -42,14 +46,13 @@ If you want a short playbook for your engineering handbook, use this:
 
 ### The real, emerging risks leaders should plan for
 
-1. Copyright in AI outputs is narrow. The U.S. Copyright Office has said purely AI-generated material cannot be copyrighted. Human selection, arrangement, and editing can help, which means your protected IP sits in the human contribution around the AI, not the raw model output. If your moat relied on copyright over raw code, shift your strategy toward architecture, data, integrations, and proprietary workflows.
-
-2. Training data permissions are shifting. More publishers and sites are signaling that their content should not be used for training. This mostly affects model providers, but it has policy implications for enterprises that fine-tune on internal or partner data. Make sure your data-governance policy is clear about what can be used for training and who approves it.
+1. **Copyright in AI outputs is narrow.** The U.S. Copyright Office has said purely AI-generated material cannot be copyrighted. Human selection, arrangement, and editing can help, which means your protected IP sits in the human contribution around the AI, not the raw model output. If your moat relied on copyright over raw code, shift your strategy toward architecture, data, integrations, and proprietary workflows.
+2. **Training data permissions are shifting.** More publishers and sites are signaling that their content should not be used for training. This mostly affects model providers, but it has policy implications for enterprises that fine-tune on internal or partner data. Make sure your data-governance policy is clear about what can be used for training and who approves it.
 
 ### Bottom line for CIOs and engineering leaders
 
-* Misconception: “AI only reproduces what it saw.” Reality: Models generate from learned patterns. Verbatim reproduction can occur in narrow situations and is reduced by training hygiene and product safeguards. Treat it as a controllable risk.  
-* Misconception: “Any AI-suggested snippet is a copyright trap.” Reality: Copyright protects substantial, original expression, not ideas or routine elements. Courts filter out the unprotectable parts of software before comparing what remains, and fair use still applies.  
-* Action: Keep normal software controls in place, enable duplication filters, review code, and document choices. For strategic risk, plan for narrower copyright in AI outputs and tighter rules around training data.
+* **Misconception:** “AI only reproduces what it saw.” **Reality:** Models generate from learned patterns. Verbatim reproduction can occur in narrow situations and is reduced by training hygiene and product safeguards. Treat it as a controllable risk.  
+* **Misconception:** “Any AI-suggested snippet is a copyright trap.” **Reality:** Copyright protects substantial, original expression, not ideas or routine elements. Courts filter out the unprotectable parts of software before comparing what remains, and fair use still applies.  
+* **Action:** Keep normal software controls in place, enable duplication filters, review code, and document choices. For strategic risk, plan for narrower copyright in AI outputs and tighter rules around training data.
 
 *DISCLAIMER: This article is for general information and is not legal advice. If you face a specific dispute, speak with counsel.*
