✅ All frontmatter fields generated: Now includes all available fields from the schema (title, date, slug, excerpt, tags, featuredImage, ogTitle,   ogDescription, ogImage, canonicalUrl, draft) with boilerplate data
  ✅ H1 title removed: The script no longer adds #  at the top of the content

  ✅ Robust test content: Added comprehensive markdown examples including:
  - Multiple heading levels
  - Code blocks (JavaScript, Bash, JSON)
  - Lists (ordered and unordered) with formatting
  - Links and images
  - Tables with emojis
  - Blockquotes
  - Various text formatting (bold, italic, inline code)

--- a/content/articles/2025-08-13-ai-code-and-copyright.mdx
+++ b/content/articles/2025-08-13-ai-code-and-copyright.mdx
@@ -6,7 +6,7 @@ featuredImage: "/images/digital_flow_of_human_code.webp"
 ---
 **TLDR version:** AI pair programmers are not giant copy machines. Verbatim copying can happen in edge cases, yet the bigger business risks sit elsewhere. Treat this like any other software risk: understand where copyright protection applies, add guardrails, review outputs, and keep moving.
 
-### The common misconception
+### The Common Misconception
 
 You may have heard, “AI was trained on text and code, so it can only spit that back out.” That is not how modern models work. Large language models learn patterns in language, then generate new sequences from those patterns. They do not store a database of articles or repos to fetch on demand.
 
@@ -55,4 +55,9 @@ If you want a short playbook for your engineering handbook, use this:
 * **Misconception:** “Any AI-suggested snippet is a copyright trap.” **Reality:** Copyright protects substantial, original expression, not ideas or routine elements. Courts filter out the unprotectable parts of software before comparing what remains, and fair use still applies.  
 * **Action:** Keep normal software controls in place, enable duplication filters, review code, and document choices. For strategic risk, plan for narrower copyright in AI outputs and tighter rules around training data.
 
-*DISCLAIMER: This article is for general information and is not legal advice. If you face a specific dispute, speak with counsel.*
+***DISCLAIMER:** This article is for general information and is not legal advice. If you face a specific dispute, speak with counsel.*
+
+For in depth analysis, check out the these articles:
+
+* [Houston Law Review - Copyright Safety for Generative AI](https://houstonlawreview.org/article/92126-copyright-safety-for-generative-ai)
+* [Fenwick Analysis on Federal Court Rulings on AI and Copyright](https://www.fenwick.com/insights/publications/two-federal-courts-rule-that-reproduction-of-books-to-train-llms-is-fair-use-but-with-caveats-and-strikingly-different-views)
