Updated AI Job article with more info.

--- a/content/articles/2025-07-04-ai-and-jobs-a-balanced-view-on-job-creation-and-destruction.mdx
+++ b/content/articles/2025-07-04-ai-and-jobs-a-balanced-view-on-job-creation-and-destruction.mdx
@@ -4,17 +4,40 @@ date: "2025-07-04"
 slug: "ai-and-jobs-a-balanced-view-on-job-creation-and-destruction"
 featuredImage: "/images/smashing-and-mending-jobs.webp"
 ---
-Not long ago, Dario Amodei, CEO of Anthropic, warned that AI could [eliminate](https://www.axios.com/2025/05/28/ai-jobs-white-collar-unemployment-anthropic) up to 50% of white-collar jobs within five years. Understandably, this has stirred anxiety and fueled discussions around universal basic income. It's no surprise, especially when headlines use terms like "bloodbath" to describe the situation.
+Not long ago, Dario Amodei, CEO of Anthropic, warned that AI could [eliminate](https://www.axios.com/2025/05/28/ai-jobs-white-collar-unemployment-anthropic) up to **50% of white‑collar jobs within five years**. Understandably, this has sparked anxiety and conversation around universal basic income—especially when headlines describe the scenario as a “bloodbath.”
 
-I don't claim to predict the future of AI, but neither do the doomers or the optimists. However, it's worth examining the straightforward economic logic suggesting that AI might create more jobs than it displaces.
+I don’t claim to predict the future of AI, and neither do the doomers or the optimists. But it’s worth considering the economic logic that suggests AI might ultimately **create more jobs than it displaces**.
 
-As AI enhances individual productivity, operational costs decrease. Lower costs make it easier to start new businesses, and higher productivity increases returns on investment. This environment encourages the formation of new businesses or nonprofits.
+As AI enhances productivity, it drives down operational costs. Lower costs and higher productivity make it easier to start new businesses—and raise returns on investment. This environment encourages the formation of new firms and nonprofits.
 
-Consider a business with 10 employees. If AI enables the them to operate with 5 employees at double the productivity, it might cut 5 positions. However, the reduced costs and increased efficiency could lead to the creation of two new businesses, each employing 5 people. Now, instead of one firm with 10 employees, there are three firms with a total of 15 employees—a net gain of 5 jobs.
+Think of a company with 10 employees: if AI enables the same output with five people, the other five roles might be cut. But the cost savings and efficiency gains might lead to the creation of two new ventures, each employing five people—transforming one 10‑person firm into three firms with 15 employees. That’s a net gain of five jobs.
 
-This concept aligns with Schumpeter's theory of "[creative destruction](https://www.investopedia.com/terms/c/creativedestruction.asp)," where innovation disrupts existing industries but also fosters new opportunities.
+This is a modern echo of Schumpeter’s theory of “[creative destruction](https://www.investopedia.com/terms/c/creativedestruction.asp),” where innovation disrupts industries but paves the way for new growth.
 
-Without doubt, there will be significant disruption and painful transition. The pace alone is likely to be difficult and chaotic for many of us, and the benefits of emerging opportunities may be unevenly distributed. It's not my intention to dismiss any of that, but given the volume of doomer articles, I thought it could be helpful to at least remind ourselves that it's not guaranteed to be all doom and gloom. Understanding these dynamics can provide a more balanced perspective amidst prevalent job loss narratives.
+## The Deeper Challenges We Face
 
-How do you perceive AI's impact on employment in your industry?
+Still, it's vital to recognize the **real dangers shaping the job horizon**. These forces are multi‑faceted—and how we manage them will determine our path from disruption to stability.
 
+### 1. The Disruption Gap
+
+AI is more than a tool—it fundamentally rewrites how we work. Yet the technology is maturing faster than regulatory frameworks, norms, or systems. That leaves us in an intense period of uncertainty, but also of **maximum agency**. AI developers look to us—for real use cases, for separating mirages from value. The most successful leaders will be experimental, agile, and discerning. They will define the new paradigms. Once that happens, AI evolves around what is truly valuable. Until then? Disruption is messy and often unsettling. McKinsey published an excellent guide to [empowering people to unlock AI's full potential at work](https://www.mckinsey.com/capabilities/mckinsey-digital/our-insights/superagency-in-the-workplace-empowering-people-to-unlock-ais-full-potential-at-work) I would recommend for further reading.
+
+### 2. The Talent Pipeline Problem
+
+Perhaps the most unsettling challenge of all is how we cultivate the next generation of professionals. AI is currently excelling at entry‑level tasks—slowing hiring at the lowest tiers. That’s worrisome, because the future’s judgment and experience typically come from doing the grunt work first. Without that stepping stone, where will tomorrow’s leaders gain context, perspective, and practical skills? This isn’t just a problem—it’s an **existential threat to the professional pipeline**. Leaders must grapple with it urgently. The Wharton School of Business has a great [article](https://knowledge.wharton.upenn.edu/article/is-ai-pushing-us-to-break-the-talent-pipeline/) on this topic I recommend reading.
+
+## Leadership in the Age of AI
+
+Despite the upheaval, I remain **optimistic** that we will regain our foothold and channel AI into growth and opportunity. Yet the short term is going to be rocky.
+
+Harvard Business Review outlines an **[AI‑maturity model](https://www.harvardbusiness.org/insight/ai-first-leadership-embracing-the-future-of-work/)** for leaders: moving from basic AI understanding to building real‑time AI adoption and strategic disruption. It emphasizes the importance of cultivating an AI‑first mindset—rooted in experimentation and long-term vision
+
+True leaders will:
+
+* Embrace experimentation, while quickly separating real from hype.
+* Champion integration of new and veteran talent—leveraging the strengths of both.
+* Create conditions where entry‑level professionals still learn, grow, and innovate.
+
+What I recommend to my fellow leaders is to start by understanding the basics of AI and how it works. Then, start experimenting with it in your own organization. The best leaders will also find the insightful and experimental members of their teams and empower them to experiment with AI.  In the end, it's going to take both a light top down approach and a heavy bottom up approach from the people closest to the world to make sure that AI is used in a way that is beneficial for the organization and its employees.
+
+This is going to be much more difficulty than anyone give sit credit for.  As I like to say though ***"If it wasn't hard, they wouldn't need us."***
